app/styles/root.css
/*
 * Copyright 2024 Uppsala University Library
 *
 * This file is part of DiVA Client.
 *
 *     DiVA Client is free software: you can redistribute it and/or modify
 *     it under the terms of the GNU General Public License as published by
 *     the Free Software Foundation, either version 3 of the License, or
 *     (at your option) any later version.
 *
 *     DiVA Client is distributed in the hope that it will be useful,
 *     but WITHOUT ANY WARRANTY; without even the implied warranty of
 *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *     GNU General Public License for more details.
 *
 *     You should have received a copy of the GNU General Public License
 */

@import './colors.scss' layer(root);
@import './typography.css' layer(root);
@import './spacing.css' layer(root);
@import './normalize.css' layer(root);
@import './form-component.css' layer(components);
@import './grid.scss' layer(root);

@layer root, components;

@layer root {
  *,
  *::before,
  *::after {
    box-sizing: border-box;
    outline-offset: -2px;
  }

  :root {
    /* Border radius */
    --border-radius: 8px;
    --border-radius-s: 4px;
    --member-bar-height: 5rem;
    --diva-header-bar-height: 4rem;
    --header-height: calc(
      var(--member-bar-height) + var(--diva-header-bar-height)
    );
    --content-max-width: 1800px;

    /* Shadows */
    --elevation:
      rgb(0 0 0 / 20%) 0 3px 5px -1px, rgb(0 0 0 / 14%) 0 6px 10px 0,
      rgb(0 0 0 / 12%) 0 1px 18px 0;

    *:focus-visible {
      outline: 2px solid var(--color-link-selected);
    }

    background-color: var(--color-background-darker);

    body {
      margin: 0;
      font-family: var(--font-family-main), sans-serif;
      font-size: var(--font-size-base);
      line-height: var(--line-height-base);
      color: var(--color-text);
      background-color: var(--color-background);
    }

    a {
      color: var(--color-link);
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }

      &:active {
        color: var(--color-link-selected);
      }

      &:visited {
        color: var(--color-link-visited);
      }
    }

    table {
      width: 100%;
      border-spacing: 0;
      border: 1px solid var(--color-output-card-border);
      border-radius: var(--border-radius-s);
    }

    th,
    td {
      padding: var(--gap) var(--gap-l);
      text-align: left;
    }

    th {
      border-bottom: 1px solid var(--color-output-card-border);
      background-color: var(--color-table-heading);
      font-weight: 600;
    }

    tr:not(:last-child) td {
      border-bottom: 1px solid var(--color-output-card-border);
    }

    dialog {
      background-color: var(--color-background);
    }

    pre {
      font-family: monospace;
    }

    details summary {
      cursor: pointer;
    }

    details:has(summary:focus-visible) {
      outline: 2px solid var(--color-link-selected);
    }
  }
}

.diva-logo-text {
  fill: var(--color-text);
}

.diva-logo-star {
  fill: var(--color-accent);
}

.flash {
  outline: 2px solid var(--color-link-selected);
  scroll-margin: var(--gap-l);
  transition: outline 0.2s ease-in-out;
  border-radius: var(--border-radius);
}

.lucide {
  width: 1em;
  height: 1em;
}

.output-card {
  background: var(--color-output-card-background);
  border: 1px solid var(--color-output-card-border);
  border-radius: var(--border-radius);
  padding: var(--gap-l);
}

body.dialog-open {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
}

.icon-text {
  display: flex;
  align-items: center;
  gap: var(--gap-s);
}

